# httpserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  To Do  a.out  forbidden  index.html  index2.html  input_cgi  ll  multipart.html  test.cpp  testdf.cpp  tester.cpp  todo  webserv  webserv.conf  webserv.cpp  webserv.hpp
CGI-SCRIPTS/: cgi.sh  tmp
CGI_SCRIPTS/: Dashboard.php  Login.php  pyet.py  python.py  test.py
Indexes/: BadRequest.html  Conflict.html  Forbidden.html  GatewayTimeout.html  HTTPVersionNotSupported.html  InternalServerError.html  MethodNotAllowed.html  NoContent.html  NotFound.html  NotImplemented.html  Success.html  URITooLong.html  Unauthorized.html
cgi-bin/: a.out  cgi.sh
cgi-scripts/: Dashboard.php  Form.py  Login.php
include/: BaseResponse.hpp  CGI.hpp  ConfigData.hpp  ConfigValidator.hpp  Connection.hpp  Define.hpp  Exceptions.hpp  GetMethodResponse.hpp  HttpServer.hpp  Lexer.hpp  MainResponse.hpp  MultiPart.hpp  Parser.hpp  Post.hpp  Request.hpp  Response.hpp
sheets/: grammar.txt  multipartgrammar.md  notes  pseudo1.md  pseudocode.md  request.md
sheets/diagrams/: configfile.tldr  epoll.tldr
src/: BaseResponse.cpp  CGI.cpp  Chunked.cpp  ConfigValidator.cpp  Connection.cpp  Delete.cpp  EPOST.cpp  EPost.cpp  Error.cpp  Get.cpp  GetMethodResponse.cpp  HttpServer.cpp  Lexer.cpp  MainResponse.cpp  MultiPart.cpp  POST.cpp  Parser.cpp  Post.cpp  ProcessRequest.cpp  Request.cpp  Response.cpp  index.html
test/: test.php
tests/: CMakeLists.txt
www/: Login.php
